# TarotAI

./: .envrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SSOT.md  aider.conf.yml  assistant_config.yml  bash  check_bashrc.sh  cli.py  config.yml  coverage.xml  dev-requirements.txt  makefile  markdown  pyproject.toml  pytest.ini  python  requirements.txt  setup.ps1  setup.py  setup.sh  signatures.py  text  verify_project_structure.py
.backups/errors_20250118_201659/: base.py  errors.py  severity.py
.backups/errors_20250118_201659/transitions/: legacy.py
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml
data/: cards_ordered.json  clean_embeddings.py  golden_dawn.json
docs/: SSOT.md  non-technical-overview.md
docs/architecture/: SSOT.md
docs/guides/: markdown  non-technical-overview.md
scripts/: generate_meanings.py  process_golden_dawn.py  validate_structure.py
scripts/ai/: test_models.py
scripts/data/: generate_test_deck.py  validate_data.py
scripts/data_processing/: bookT.py
scripts/dev/: cleanup.py  create_test_files.py  fix_imports.py  print_imports.py  reorganize_core.py
scripts/dev/tests/: test_cli.py
scripts/dev/tests/ai/agents/: test_interpretation.py  test_knowledge.py
scripts/dev/tests/ai/embeddings/: test_manager.py  test_storage.py
scripts/dev/tests/core/errors/: test_base.py
scripts/processing/: extract_golden_dawn.py  generate_card_data.py  generate_meanings.py  process_golden_dawn.py  update_embeddings.py  validate_card_schema.py
scripts/utils/: __init__.py
scripts/validation/: validate_cards.py
src/tarotai/: __init__.py  cli.py  display.py
src/tarotai/ai/: __init__.py
src/tarotai/ai/agents/: __init__.py  base.py  interpretation.py  knowledge.py
src/tarotai/ai/agents/orchestration/: interpreter.py  reading.py
src/tarotai/ai/agents/validation/: base.py
src/tarotai/ai/clients/: __init__.py  base.py  claude.py  deepseek_v3.py  imports.py  registry.py  unified.py  unified.py.bak  voyage.py
src/tarotai/ai/clients/providers/: claude.py  deepseek_v3.py  voyage.py
src/tarotai/ai/embeddings/: __init__.py  manager.py  storage.py
src/tarotai/ai/prompts/: __init__.py  manager.py  templates.py
src/tarotai/ai/prompts/templates/: ai_interaction.j2  card_combination.j2  card_generation.j2  card_meaning.j2  error_handling.j2  historical_context.j2  reading_interpretation.j2  spread_analysis.j2  symbolism_analysis.j2
src/tarotai/ai/rag/: __init__.py  generator.py  manager.py  vector_store.py
src/tarotai/config/: __init__.py  config.py  constants.py
src/tarotai/config/schemas/: config.py  limits.py
src/tarotai/core/: __init__.py  ai_clients.py  card.py  card_processor.py  config.py  deck.py  errors.py  exceptions.py  interpreter.py  limits.py  logging.py  prompt_templates.py  prompts.py  rag.py  reading.py  reading_history.py  types.py  vector_store.py  voice.py
src/tarotai/core/clients/: __init__.py  base.py
src/tarotai/core/display/: __init__.py
src/tarotai/core/errors/: __init__.py  base.py  errors.py  severity.py
src/tarotai/core/exceptions/: exceptions.py
src/tarotai/core/models/: __init__.py  card.py  deck.py  types.py
src/tarotai/core/services/: __init__.py  agents.py  card_processor.py  interpreter.py  reading.py
src/tarotai/core/voice/: __init__.py
src/tarotai/extensions/enrichment/: __init__.py  cli.py  enricher.py  exceptions.py  reading_history.py
src/tarotai/extensions/enrichment/analyzers/: base.py  insights.py
src/tarotai/extensions/enrichment/clients/: base.py  claude.py  deepseek.py  voyage.py
src/tarotai/extensions/enrichment/knowledge/: golden_dawn.py  image_processor.py
src/tarotai/extensions/enrichment/services/: enricher.py
src/tarotai/ui/: __init__.py  display.py
tests/: conftest.py  test_basic.py  test_card.py  test_cli.py  test_config.py  test_embeddings.py  test_errors.py  test_golden_dawn.py  test_reading.py
tests/ai/: conftest.py  test_embeddings.py
tests/ai/agents/: test_interpretation.py  test_knowledge.py
tests/ai/agents/knowledge/: test_golden_dawn.py  test_knowledge_agent.py
tests/ai/agents/validation/: test_base.py
tests/ai/embeddings/: test_embeddings.py  test_manager.py  test_storage.py
tests/core/: test_card.py  test_card_manager.py  test_core.py  test_deck.py  test_reading.py  test_reading_input.py
tests/core/errors/: test_base.py  test_errors.py
tests/data/: test_cards.json
