[build-system]
requires = [
    "uv>=0.1.0",
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tarotai"
version = "0.1.0"
description = "Neural-Enhanced Tarot Reading Interface"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"                                                                                                                                                                                                                                                         
                                                                                                                                                                                                                                                                                          
 dependencies = [                                                                                                                                                                                                                                                                         
     # Core AI/ML Stack                                                                                                                                                                                                                                                                   
     "anthropic>=0.39.0,<0.44.0",                                                                                                                                                                                                                                                         
     "voyageai>=0.3.0,<0.4.0",                                                                                                                                                                                                                                                            
     "numpy>=1.26.0,<2.0.0",                                                                                                                                                                                                                                                              
                                                                                                                                                                                                                                                                                          
     # Voice Processing                                                                                                                                                                                                                                                                   
     "elevenlabs>=1.50.3,<2.0.0",                                                                                                                                                                                                                                                         
     "pyttsx3>=2.98,<3.0.0",                                                                                                                                                                                                                                                              
                                                                                                                                                                                                                                                                                          
     # API and Networking                                                                                                                                                                                                                                                                 
     "fastapi>=0.109.0,<0.116.0",                                                                                                                                                                                                                                                         
     "httpx>=0.27.0,<0.28.0",                                                                                                                                                                                                                                                             
                                                                                                                                                                                                                                                                                          
     # Data and Configuration                                                                                                                                                                                                                                                             
     "pydantic>=2.10.5,<2.11.0",                                                                                                                                                                                                                                                          
     "pydantic-settings>=2.7.1,<3.0.0",                                                                                                                                                                                                                                                   
     "pydantic-core>=2.18.2,<2.28.0",                                                                                                                                                                                                                                                     
     "pyyaml>=6.0.0,<7.0.0",                                                                                                                                                                                                                                                              
                                                                                                                                                                                                                                                                                          
     # File Processing                                                                                                                                                                                                                                                                    
     "Pillow>=10.0.0,<11.0.0",                                                                                                                                                                                                                                                            
     "PyPDF2>=3.0.0,<4.0.0",                                                                                                                                                                                                                                                              
                                                                                                                                                                                                                                                                                          
     # CLI and Interface                                                                                                                                                                                                                                                                  
     "typer>=0.13.1,<0.16.0",                                                                                                                                                                                                                                                             
     "questionary>=2.0.1,<3.0.0",                                                                                                                                                                                                                                                         
     "rich>=13.9.4,<14.0.0",                                                                                                                                                                                                                                                              
                                                                                                                                                                                                                                                                                          
     # Build Tools                                                                                                                                                                                                                                                                        
     "setuptools>=69.0.0,<76.0.0",                                                                                                                                                                                                                                                        
     "uv>=0.1.0,<1.0.0"                                                                                                                                                                                                                                                                   
 ]                                                                                                                                                                                                                                                                                        
                                                                                                                                                                                                                                                                                          
 [project.optional-dependencies]                                                                                                                                                                                                                                                          
 dev = [                                                                                                                                                                                                                                                                                  
     # Testing                                                                                                                                                                                                                                                                            
     "pytest>=8.3.3,<9.0.0",                                                                                                                                                                                                                                                              
     "pytest-cov>=4.0.0,<5.0.0",                                                                                                                                                                                                                                                          
     "pytest-asyncio>=0.23.0,<0.26.0",                                                                                                                                                                                                                                                    
                                                                                                                                                                                                                                                                                          
     # Code Quality                                                                                                                                                                                                                                                                       
     "black>=23.0.0,<25.0.0",                                                                                                                                                                                                                                                             
     "flake8>=6.0.0,<7.0.0",                                                                                                                                                                                                                                                              
     "mypy>=1.0.0,<2.0.0"                                                                                                                                                                                                                                                                 
 ]                          

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=tarotai --cov-report=term-missing"
python_files = "test_*.py"

[project.scripts]
tarotai = "tarotai.cli:app"
generate-meanings = "scripts.generate_meanings:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tarotai*"]
exclude = ["tests*"]
namespaces = true

[tool.setuptools.package-data]
tarotai = [
    "data/*.json",
    "data/*.pdf",
    "docs/guides/*",
    "docs/scripts/*",
    "py.typed"
]

[tool.uv]
cache-dir = ".uv_cache"