[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tarotai"
version = "0.1.0"
description = "AI-powered Tarot card reading and interpretation"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["tarot", "ai", "divination"]
authors = [
    {name = "Fuar", email = "fuar@quantum.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment"
]

dependencies = [
    "annoy>=1.17.3",
    "anthropic>=0.39.0",
    "elevenlabs>=1.50.3",
    "fastapi>=0.109.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "PyPDF2>=3.0.0",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.2.1",
    "pymupdf>=1.24.0",  
    "pyttsx3>=2.98",
    "questionary>=2.0.1",
    "rich>=13.9.4",
    "typer>=0.13.1",
    "voyageai>=0.3.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest>=8.3.3",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "setuptools>=69.0.0"
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0"
]

[project.urls]
Homepage = "https://github.com/quantum-fusion/TarotAI"
Documentation = "https://tarotai.readthedocs.io/"
Repository = "https://github.com/quantum-fusion/TarotAI.git"
Changelog = "https://github.com/quantum-fusion/TarotAI/blob/main/CHANGELOG.md"

[project.scripts]
tarotai = "tarotai.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tarotai*"]
exclude = ["tests*"]

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=tarotai"
testpaths = [
    "tests",
]
